--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,7 +4,7 @@
     },
     "code-runner.runInTerminal": true,
     "editor.codeActionsOnSave": {
-        "source.fixAll.eslint": true,
-        "source.fixAll": true
-      },
+        "source.fixAll.eslint": "explicit",
+        "source.fixAll": "explicit"
+    },
 }
